fix: wrapping of js-program

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -54,7 +54,7 @@ div {
 
 #program-display code {
   display: block;
-  min-width: 2000px;
+  min-width: 3000px;
   background-color: #f8f8f8;
   border: none;
   padding: 0px;
